--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <h2>Контакты</h2>
     <p>Телефон: +7 (123) 456-78-90</p>
     <p>Email: info@punkbank.ru</p>
-    <p>Адрес: г. Москва, ул. Примерная, д. 1</p>
+    <p>Адрес: г.Рязань ул. Ленина 16/Вознесенская 65</p>
 </section>
 
 <script>
