--- a/products.html
+++ b/products.html
@@ -38,6 +38,12 @@
         h2 {
             margin-top: 0;
         }
+        img {
+            max-width: 100%; /* Ограничиваем ширину изображения */
+            height: auto; /* Автоматическая высота для сохранения пропорций */
+            border-radius: 5px; /* Закругленные углы для изображений */
+            margin-bottom: 10px; /* Отступ снизу */
+        }
     </style>
 </head>
 <body>
@@ -48,6 +54,7 @@
 
 <section>
     <h2>Дебетовая карта "Зажигательная карта"</h2>
+    <img src="https://img.icons8.com/?size=100&id=22185&format=png&color=7950F2" alt="Дебетовая карта Зажигательная карта">
     <p>На выбор 4 разных оформления карты. Бесплатное обслуживание, повышенный кэшбэк за покупки:</p>
     <ul>
         <li>Билеты на концерты</li>
@@ -59,16 +66,19 @@
 
 <section>
     <h2>Кредит для молодёжи</h2>
+    <img src="https://img.icons8.com/?size=100&id=1gJg-CpQvqUy&format=png&color=7950F2" alt="Кредит для молодёжи">
     <p>Кредит на открытие бизнеса с процентной ставкой 15%.</p>
 </section>
 
 <section>
     <h2>Кредит "Свобода от обязательств"</h2>
+    <img src="https://img.icons8.com/?size=100&id=AhRnLEUXZTTN&format=png&color=7950F2">
     <p>Кредит на обучение игре на музыкальных инструментах, программированию или дизайну. Ставка 10% только для молодёжи от 18 до 25 лет.</p>
 </section>
 
 <section>
     <h2>Вклад "Анархия сбережений"</h2>
+    <img src="https://img.icons8.com/?size=100&id=5469&format=png&color=7950F2" alt="Вклад Анархия сбережений">
     <p>Ставка 17%, минимальная сумма от 10,000 рублей. Пополнение и пролонгация возможны.</p>
     <p>Дополнительное условие: вкладчик может получить бесплатную футболку с группой:</p>
     <ul>
