--- a/personal_cabinet.html
+++ b/personal_cabinet.html
@@ -46,7 +46,7 @@
     <h2>Ваши данные</h2>
     <p>Имя: Иван Иванов</p>
     <p>Баланс: 100,000 ₽</p>
-    <p>Номер счета: 1234567890</p>
+    <p>Номер счета: 40817 810 4 0036 0000365</p>
 </section>
 
 <section>
