--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li>Открытие счетов</li>
         <li>Кредиты и займы</li>
         <li>Инвестиционные услуги</li>
-        <li>Картовые продукты</li>
+        <li>Банковские карты</li>
         <li>Онлайн-банкинг</li>
     </ul>
 </section>
