--- a/products.html
+++ b/products.html
@@ -90,6 +90,28 @@
 </section>
 
 <section>
+    <h2>Молодёжный банковский продукт: «Стимул»</h2>
+        <img src="https://img.icons8.com/?size=100&id=22128&format=png&color=7950F2" alt="Молодёжный банковский продукт: «Стимул»">
+     <p>«Стимул» — это специальная кредитная карта для молодых людей с особыми условиями и бонусами. Она предназначена для студентов, начинающих специалистов и всех, кто только начинает свой путь в карьере.</p>
+    <h3>Условия продукта:</h3>
+    <ul>
+        <li>льготный период до 180 дней без начисления процентов на покупки и снятие наличных;</li>
+        <li>кредитный лимит от 10,000 до 150,000 рублей;</li>
+        <li>минимальный платёж — 8 % от суммы задолженности;</li>
+        <li>бесплатное оформление и обслуживание карты;</li>
+        <li>возможность бесконтактной оплаты через систему Mir Pay;</li>
+        <li>удобное пополнение карты через мобильное приложение или в любом отделении банка.</li>
+    </ul>
+    <h3>Бонусы и преимущества:</h3>
+    <ul>
+        <li>скидки на услуги мобильной связи, интернет-провайдеров и других компаний;</li>
+        <li>кешбэк на покупки в определённых категориях товаров;</li>
+        <li>возможность участия в акциях и розыгрышах с призами и подарками.</li>
+    </ul>
+    <p>«Стимул» поможет молодым людям начать самостоятельную жизнь, делая повседневные траты более комфортными и выгодными.</p>
+</section>
+
+<section>
     <button onclick="window.location.href='index.html'" style="margin-top: 20px;">Вернуться на главную страницу</button>
 </section>
 
