--- a/personal_cabinet.html
+++ b/personal_cabinet.html
@@ -62,7 +62,7 @@
     }
 
     function requestLoan() {
-        alert("Форма запроса кредита будет здесь.");
+        alert("Заявка на кредит принята.");
     }
 
     function logout() {
